Add grid size slider

--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 	</head>
 	<body>
 		<h1 class="page-title">Etch-a-sketch</h1>
+
+		<label for="grid-size">Grid size: </label>
+		<input type="range" name="grid-size" min="16" max="100" step="1" value="16" />
+		<output class="price-output" for="price"></output>
+
 		<div class="sketch-container sketch-container-js"></div>
 	</body>
 </html>
