Add reset button

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 		<input type="range" name="grid-size" min="16" max="100" step="1" value="16" />
 		<output class="price-output" for="price"></output>
 
+		<button class="reset-btn reset-btn-js">reset</button>
+
 		<div class="sketch-container sketch-container-js"></div>
 	</body>
 </html>
