Add basic draw / erase functionality

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 		<output class="price-output" for="price"></output>
 
 		<button class="reset-btn reset-btn-js">reset</button>
+		<p>Hold <kbd>alt</kbd>to draw.</p>
+		<p>Hold <kbd>ctrl</kbd>to erase</p>
 
 		<div class="sketch-container sketch-container-js"></div>
 	</body>
