Implement erase grid option

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 					/>
 					<label for="grid-layout">Show grid layout</label>
 				</li>
-				<li class="options__item">Erase current grid</li>
+				<li class="grid-eraser-js options__item">Erase current grid</li>
 			</ul>
 		</div>
 		<div class="sketch-container sketch-container-js"></div>
