Update UI instructions

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 				<input type="range" name="grid-size" min="16" max="100" step="1" value="16" />
 				<output class="price-output" for="price"></output>
 				<button class="btn btn--reset reset-btn-js">reset</button>
+				<p>Hover mouse over the grid</p>
 				<p>Hold <kbd>alt</kbd>to draw</p>
 				<p>Hold <kbd>ctrl</kbd>to erase</p>
 			</div>
