Implement random color option

--- a/index.html
+++ b/index.html
@@ -25,10 +25,18 @@
 			<button class="btn btn--options btn--options-js">Options</button>
 			<ul class="options options-js">
 				<li class="options__item">
-					<input class="color-picker-js" type="color" value="#e51416" id="color" />
+					<input class="color-picker-js" type="color" value="#f7a4b8" id="color" />
 					<label for="color">Change color</label>
 				</li>
-				<li class="options__item">Use random colors</li>
+				<li class="options__item">
+					<input
+						class="random-colors-checkbox-js"
+						type="checkbox"
+						name="random-colors"
+						id="random-colors"
+					/>
+					<label for="random-colors">Use random colors</label>
+				</li>
 				<li class="options__item">
 					<input
 						class="grid-overlay-checkbox-js"
